@@ -1,15 +1,16 @@
 #!/bin/bash
 
-# Display welcome message
-echo -e "Enlik - Programming Assignment 02"
-
-# Part A: Create a Spatial Index in MySQL
-echo "Part A: Create a Spatial Index in MySQL"
+# only for debug / development purpose
 echo "Dropping existing table..."
 mysql < dropSpatialIndex.sql
 echo "Tables dropped successfully."
 printf "\n"
 
+# Display welcome message
+echo -e "Enlik - Programming Assignment 02"
+
+# Part A: Create a Spatial Index in MySQL
+echo "Part A: Create a Spatial Index in MySQL"
 echo "Creating new table..."
 mysql < createSpatialIndex.sql
 echo "Tables created successfully."
@@ -17,14 +18,19 @@ printf "\n"
 
 # Part B: Create a Lucene Index
 echo "Part B: Create a Lucene Index"
-# Compile and run Indexer.java to create Lucene index
-echo "Compile java file..."
+
+# Compile indexer
 javac Indexer.java
-echo "Java file compiled successfully."
 printf "\n"
 
-# Run the Java program Indexer
-echo "Running Indexer.java"
-java Indexer
+# Run indexer (permitting restricted native access features and enable optimization via vectorization (optional parameters))
+java --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector Indexer
+
+# Compile searcher
+javac Searcher.java
+
+# Run searcher (permitting restricted native access features and enable optimization via vectorization (optional parameters))
+java --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector Searcher "the keeper" 10
+
 
 # PART C
